[package]
name = "cang-jie"
version = "0.9.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"
description = "A Chinese tokenizer for tantivy"
license = "MIT"
repository = "https://github.com/DCjanus/cang-jie"
readme = "README.MD"
keywords = ["search", "tokenizer", "Chinese", "tantivy"]

[dependencies]
tantivy = { git = "https://github.com/lengyijun/tantivy"}
jieba-rs = { git = "https://github.com/EmisonLu/jieba-rs-sgx"}
log = "0.4.11"

[dev-dependencies]
flexi_logger = "0.15.10"
